--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -34,7 +34,7 @@
                 </li>
                 <li *ngIf="!auth.loggedIn" class="nav-item">
                     <a (click)="auth.login()"  class="nav-link"
-                        href="javascript:void(0)">Login</a>
+                        href="javascript:void(0)"><i class="fas fa-sign-in-alt"></i> Login</a>
                 </li>
                 <li *ngIf="auth.loggedIn" class="nav-item">
                     <div class="dropdown">
